# RomEMU

./: .gitignore  CMakeLists.txt  README.md  build.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
frontend/: app.js  index.html  style.css
main/: CMakeLists.txt  access_log.c  access_log.h  compressed_store.c  compressed_store.h  embedded_files.h  eth_manager.c  eth_manager.h  gpio_control.c  gpio_control.h  i2c_eeprom_emu.c  i2c_eeprom_emu.h  idf_component.yml  lz4_block.c  lz4_block.h  main.c  pin_config.h  rom_store.c  rom_store.h  romemu_common.h  spi_flash_commands.h  spi_flash_emu.c  spi_flash_emu.h  sse_manager.c  sse_manager.h  web_handlers.c  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
tools/: embed_frontend.py
